# roguestar

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: book.yml  cargo.yml  publish.yml  rust.yml
assets/sprites/characters/: npc-grey.aseprite  npc-grey.json  npc-grey.ron  player.aseprite
assets/sprites/ships/: Ship-001.aseprite
guide/: book.toml
guide/src/: SUMMARY.md  archetypes.md  characters.md  equipment.md  generation.md  history.md  introduction.md  plothooks.md  setting.md  starships.md
src/: common.rs  engine.rs  gameplay.rs  generation.rs  main.rs  menus.rs  mode.rs  plugin.rs  utility.rs
src/cartographer/: faction.rs
src/common/: assetloader.rs  cameraloader.rs  musicplayer.rs  worldclock.rs
src/engine/: common.rs  cyberspace.rs  mainmenu.rs  pausemenu.rs  tilespace.rs  worldgen.rs
src/engine/hyperspace/: entity.rs  input.rs  setup.rs
src/engine/mainmenu/: input.rs  setup.rs
src/engine/pausemenu/: common.rs  setup.rs
src/engine/sectorspace/: entity.rs  orbit.rs  setup.rs
src/engine/tilespace/: setup.rs
src/engine/worldgen/: faction.rs  galaxy.rs  params.rs  sector.rs  setup.rs
src/gameplay/: hyperspace.rs  sectorspace.rs  tilespace.rs
src/gameplay/cyberspace/: setup.rs
src/gameplay/hyperspace/: entity.rs  input.rs  setup.rs
src/gameplay/sectorspace/: entity.rs
src/gameplay/tilespace/: setup.rs
src/generation/: apartment.rs  context.rs  faction.rs  plotter.rs  sector.rs
src/menus/: common.rs  input.rs  system.rs
src/mode/: cyberspace.rs  hyperspace.rs  menu.rs  sectorspace.rs  tilespace.rs  worldgen.rs
src/mode/cyberspace/: state.rs
src/mode/hyperspace/: components.rs  input.rs  state.rs
src/mode/menu/: common.rs  mainmenu.rs  pausemenu.rs
src/mode/sectorspace/: input.rs  orbit.rs  state.rs
src/mode/tilespace/: state.rs
src/mode/worldgen/: galaxy.rs  params.rs  sector.rs  state.rs
src/old/: hex.rs
src/old/component/: common.rs  ground.rs  hyperspace.rs
src/old/hex/: location.rs
src/old/plugin/: animator.rs  esm.rs
src/old/resource/: cartographer.rs  gameclock.rs  parameters.rs
src/old/system/: common.rs  (+2 more)
src/plugin/: parallax.rs
src/utility/: dice.rs  poisson.rs  random.rs  rtree.rs  texgen.rs  weightedtable.rs  worldclock.rs
(+32 files in other folders)
