[package]
name = "roguestar"
edition = "2021"
version = "0.0.1"
license = "GPLv3"
keywords = ["roguelike"]
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
description = "An experimental Roguelike Adventure across the stars."

[dependencies]
auto_ops = "0.3"
noise = "0.7"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
ron = "0.7"
rstar = "0.9"
serde = "1"
tracing = "0.1"
tracing-tracy = "0.8"

[dependencies.bevy]
version = "0.5"
#git = "https://github.com/bevyengine/bevy.git"
#branch = "main"

[dependencies.bevy_tilemap]
version = "0.4"
#git = "https://github.com/joshuajbouw/bevy_tilemap.git"
#branch = "master"

[dependencies.bevy_rapier2d]
version = "0.11"
#branch = "master"

[dependencies.hexgrid]
git = "https://github.com/huhlig/hexgrid.git"
branch = "master"

[dependencies.nominae]
git = "https://github.com/huhlig/nominae-rs.git"
branch = "master"

[dev-dependencies.png]
version = "0.17"